--- a/style.css
+++ b/style.css
@@ -1,78 +1,63 @@
- 
-h1 {  
-    text-align: center;  
-    padding: 23px;  
-    background-color: skyblue;  
-    color: white;  
-    }  
-  
 #clear{  
-    width: 230px;  
-    border: 2px solid black;  
-    color: black;
-    border-radius: 3px;  
-    padding: 20px; 
-    margin-left: 18px; 
-    background-color:lightcoral; 
+  width: 230px;  
+  border: 2px solid black;  
+  color: black;
+  border-radius: 50px;  
+  padding: 20px; 
+  margin-left: 23px; 
+  background-color:rgb(87, 98, 109); 
 }  
 
 #edu{  
-    width: 230px;  
-    height: 50px;
-    border: 1px solid black;  
-    color: black;
-    padding: 10px;  
- 
-    background-color:lightgreen;  
-    }  
-  
+  width: 230px;  
+  height: 50px;
+  border: 1px solid black;  
+  color: black;
+  padding: 10px;  
+  background-color:lightblue;  
+  }  
+
 .formstyle  
 {  
 width: 270px;  
 height: 570px;  
 margin: auto;  
-background-color:rgb(7, 44, 7);
+background-color:rgb(4, 27, 32);
 border: 2px solid black;  
 border-radius: 20px;  
 padding: 20px;
 box-shadow: 15px 12px 8px black;
 
 }  
-  
+
 input 
 {  
-    width: 20px;  
-    background-color: firebrick;  
-    color: white;  
-    border: 2px solid black;  
-        border-radius: 10px;  
-        padding: 22px;
-        margin: 5px;  
-        margin-left: 10px;
-        font-size: 20px;  
+  width: 20px;  
+  background-color: lightgray;  
+  color: black;  
+  border: 2px solid black;  
+      border-radius: 10px;  
+      padding: 22px;
+      margin: 5px;  
+      margin-left: 10px;
+      font-size: 20px;  
+      box-shadow: 10px 10px  black;
 }  
 
+input:active {
+  background-color: rgb(18, 114, 18);
+}
+#clear:hover {
+  background-color: blueviolet;
+}
 
-  /* mouse over link */
-  input:hover {
-    background-color: red;
-  }
-  
-  /* selected link */
-  input:active {
-    background-color: rgb(73, 9, 9);
-  }
-  #clear:hover {
-    background-color: red;
-  }
-  
-  /* selected link */
-  #clear:active {
-    background-color: rgb(73, 9, 9);
-  }
+/* selected link */
+#clear:active {
+  background-color: rgb(66, 204, 77);
+}
 
-  .formstyle:hover {
-    background-color:rgb(6, 70, 6);
-  }
-     
-  
+.formstyle:hover {
+  background-color:rgb(15, 20, 24);
+}
+
+
